--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
   <script type="text/babel" src="js/animals.js"></script>
   <script type="text/babel" src="js/app.js"></script>
   <title>Animal Memes</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 
 <body>
