--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <script type="text/babel" src="js/animalList.js"></script>
   <script type="text/babel" src="js/animals.js"></script>
   <script type="text/babel" src="js/app.js"></script>
-  <title>Animal Memes</title>
+  <title>Animemes</title>
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
