--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,24 @@
   <title>Animemes</title>
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Syncopate" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Work+Sans:100" rel="stylesheet">
+
 </head>
 
 <body>
+  <main>
+    <div class="marker"></div>
+    <h1>a</h1>
+    <h1 class="n">n</h1>
+    <h1 class="i">i</h1>
+    <h1 class="m1">m</h1>
+    <h1 class="e1">e</h1>
+    <h1 class="m2">m</h1>
+    <h1 class="e2">e</h1>
+    <h1 class="s">s</h1>
+  </main>
   <div class="container">
     <!-- react code will render here -->
   </div>
