--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
   <div class="container">
     <!-- react code will render here -->
   </div>
+  <footer>
+    <p className="links">Created by <a href="stevieburnette.com">Stevie Burnette</a> & <a href="alykief.github.io/alyssanet">Alyssa Kieffer</a></p>
+  </footer>
 </body>
 
 </html>
