fixed links for our websites

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <!-- react code will render here -->
   </div>
   <footer>
-    <p className="links">Created by <a href="stevieburnette.com">Stevie Burnette</a> & <a href="alykief.github.io/alyssanet">Alyssa Kieffer</a></p>
+    <p className="links">Created by <a href="https://stevieburnette.com/">Stevie Burnette</a> & <a href="https://alykief.github.io/alyssanet/">Alyssa Kieffer</a></p>
   </footer>
 </body>
 
